// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Shimmer /> renders block 1`] = `
<span
  aria-busy="true"
  className="shimmer-0-2-1 shimmer_block-0-2-2"
  style={
    Object {
      "borderRadius": "0.125em",
      "height": "1.25ex",
      "width": "60%",
    }
  }
/>
`;

exports[`<Shimmer /> renders default 1`] = `
<span
  aria-busy="true"
  className="shimmer-0-2-1"
  style={
    Object {
      "borderRadius": "0.125em",
      "height": "1.25ex",
      "width": "60%",
    }
  }
/>
`;

exports[`<Shimmer /> renders with custom border radius 1`] = `
<span
  aria-busy="true"
  className="shimmer-0-2-1"
  style={
    Object {
      "borderRadius": "50%",
      "height": "1.25ex",
      "width": "60%",
    }
  }
/>
`;

exports[`<Shimmer /> renders with custom dimensions 1`] = `
<span
  aria-busy="true"
  className="shimmer-0-2-1"
  style={
    Object {
      "borderRadius": "0.125em",
      "height": "1em",
      "width": 100,
    }
  }
/>
`;
